language/move-lang/tests/move_check/translated_ir_tests/commands/while_move_local.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/while_move_local.move:7:13 ───
   │
 7 │         y = move x;
   │             ^^^^^^ Invalid usage of local 'x'
   ·
 7 │         y = move x;
   │             ------ The local might not have a value due to this position. The local must be assigned a value before being used
   │

